@@ -1,5 +1,16 @@
 2011-03-01  Miguel Sofer  <msofer@users.sf.net>
 
+	* generic/tclBasic.c:       This is [Patch 3168398],
+	* generic/tclCompCmdsSZ.c:  Joe Mistachkin's optimisation
+	* generic/tclExecute.c:     of Tip #285
+	* generic/tclInt.decls:
+	* generic/tclInt.h:
+	* generic/tclIntDecls.h:
+	* generic/tclInterp.c:
+	* generic/tclOODecls.h:
+	* generic/tclStubInit.c:
+	* win/makefile.vc:
+
 	* generic/tclExecute.c (ExprObjCallback): fix object leak
 
 	* generic/tclExecute.c (TEBCresume): store local var array and
